--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@heroicons/react": "^2.0.18",
 		"@monaco-editor/react": "^4.5.2",
 		"@reduxjs/toolkit": "^1.9.5",
+		"@tauri-apps/api": "^1.5.0",
 		"@types/node": "20.2.5",
 		"@types/react": "18.2.7",
 		"@types/react-dom": "18.2.4",
@@ -32,6 +33,6 @@
 		"typescript": "5.0.4"
 	},
 	"devDependencies": {
-		"@tauri-apps/cli": "^1.4.0"
+		"@tauri-apps/cli": "^1.5.0"
 	}
 }
