--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"eslint": "8.41.0",
 		"eslint-config-next": "13.4.4",
 		"lodash": "^4.17.21",
+		"monaco-editor": "^0.43.0",
 		"next": "13.4.4",
 		"postcss": "8.4.23",
 		"react": "18.2.0",
