--- a/package.json
+++ b/package.json
@@ -18,22 +18,22 @@
 		"@types/node": "20.2.5",
 		"@types/react": "18.2.7",
 		"@types/react-dom": "18.2.4",
-		"autoprefixer": "10.4.14",
-		"eslint": "8.41.0",
-		"eslint-config-next": "13.4.4",
 		"lodash": "^4.17.21",
 		"monaco-editor": "^0.43.0",
-		"next": "13.4.4",
-		"postcss": "8.4.23",
+		"next": "^13.5.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.11.0",
 		"react-redux": "^8.1.2",
 		"redux": "^4.2.1",
-		"tailwindcss": "3.3.2",
-		"typescript": "5.0.4"
+		"tailwindcss": "3.3.2"
 	},
 	"devDependencies": {
-		"@tauri-apps/cli": "^1.5.0"
+		"@tauri-apps/cli": "^1.5.0",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.56.0",
+		"eslint-config-next": "^14.0.4",
+		"postcss": "^8.4.32",
+		"typescript": "^5.3.3"
 	}
 }
