--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
 		"react-dom": "18.2.0",
 		"react-icons": "^4.11.0",
 		"react-redux": "^8.1.2",
-		"redux": "^4.2.1",
-		"tailwindcss": "3.3.2"
+		"redux": "^4.2.1"
 	},
 	"devDependencies": {
 		"@tauri-apps/cli": "^1.5.0",
@@ -34,6 +33,7 @@
 		"eslint": "^8.56.0",
 		"eslint-config-next": "^14.0.4",
 		"postcss": "^8.4.32",
+		"tailwindcss": "^3.4.0",
 		"typescript": "^5.3.3"
 	}
 }
